deploy/compose/envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

static_resources:
  listeners:
  - name: order_api_listener

    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080

    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager

        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager

          stat_prefix: order_api

          # ===============================
          # КОНФИГУРАЦИЯ МАРШРУТИЗАЦИИ
          # ===============================
          route_config:
            name: order_routes

            virtual_hosts:
            - name: order_service

              domains: ["*"]

              routes:
              - match:
                  prefix: "/api/v1/orders"
                route: 
                  cluster: order_api_cluster
                  timeout: 15s

          http_filters:
          - name: envoy.filters.http.router

            typed_config: 
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  # - name: order_inventory_listener


  clusters:
  - name: order_api_cluster

    type: STRICT_DNS

    lb_policy: ROUND_ROBIN

    load_assignment:
      cluster_name: order_api_cluster

      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: order-service
                port_value: 8080

    health_checks:
    - timeout: 3s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 2

      http_health_check:
        path: "/health"

  # - name: order_inventory_cluster
